@@ -3,8 +3,9 @@ Section: misc
 Priority: extra
 Maintainer: Dustin Kirkland <kirkland@ubuntu.com>
 Build-Depends: debhelper (>= 7),
+ pep8,
  python-all (>= 2.6),
- python-all-dev (>= 2.6.6-3~) | python-support,
+ python-all-dev,
  python-setuptools
 Standards-Version: 3.9.3
 Homepage: http://launchpad.net/ssh-import-id
